--- a/nginx.conf
+++ b/nginx.conf
@@ -1,40 +1,23 @@
-server {
-    listen 80;
+events {
+    worker_connections 1024;
+}
 
-    types {
-        text/html                             html htm shtml;
-        text/css                              css;
-        text/xml                              xml;
-        image/gif                             gif;
-        image/jpeg                            jpeg jpg;
-        application/javascript                js;
-        application/octet-stream              bin;
-        text/plain                            txt;
-        image/png                             png;
-        image/x-icon                          ico;
-        image/svg+xml                         svg svgz;
-        application/json                      json;
-        application/font-woff                 woff;
-        application/font-woff2                woff2;
-        application/vnd.ms-fontobject         eot;
-        application/x-font-opentype           otf;
-        font/ttf                              ttf;
-    }
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
-    }
+    server {
+        listen 80;
 
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|eot|ttf|woff|woff2)$ {
-        expires 1y;
-        add_header Cache-Control "public, no-transform";
-    }
+        location / {
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
+        }
 
-    error_page 404 /404.html;
-    location = /404.html {
-        root /usr/share/nginx/html;
-        internal;
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|eot|ttf|woff|woff2)$ {
+            expires 1y;
+            add_header Cache-Control "public, no-transform";
+        }
     }
 }
